--- a/src/BackEndBundle/Resources/views/Default/index.html.twig
+++ b/src/BackEndBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,9 @@
-Hello World!
+<h1>This is product list action</h1>
+
+{% for product in products %}
+
+    <h3>{{ product.id }} {{ product.name }}</h3>
+    <p>{{ product.description }}</p>
+    <p>{{ product.price }}</p>
+
+{% endfor %}
