Edit and Delete actions

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,8 @@
                 <h1>This is Shop BackEnd</h1>
                 <hr>
                 <div id="nav">
-                    <a href="{{ path('back_end_product_list') }}">Products</a>
+                    <a href="{{ path('back_end_product_list') }}">Products</a> |
+                    <a href="{{ path('back_end_product_new') }}">New Product</a>
                 </div>
                 <hr>
             </div>
