Add category entity

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,7 +15,8 @@
                 <hr>
                 <div id="nav">
                     <a href="{{ path('back_end_product_list') }}">Products</a> |
-                    <a href="{{ path('back_end_product_new') }}">New Product</a>
+                    <a href="{{ path('back_end_product_new') }}">New Product</a> ||
+                    <a href="{{ path('back_end_category_list') }}">Categories</a>
                 </div>
                 <hr>
             </div>
