--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,8 @@
                 <div id="nav">
                     <a href="{{ path('back_end_product_list') }}">Products</a> |
                     <a href="{{ path('back_end_product_new') }}">New Product</a> ||
-                    <a href="{{ path('back_end_category_list') }}">Categories</a>
+                    <a href="{{ path('back_end_category_list') }}">Categories</a> |
+                    <a href="{{ path('back_end_category_new') }}">New Category</a>
                 </div>
                 <hr>
             </div>
