Allow select category on new product action

--- a/src/BackEndBundle/Resources/views/product/list.html.twig
+++ b/src/BackEndBundle/Resources/views/product/list.html.twig
@@ -8,6 +8,7 @@
         <h3>{{ product.id }} {{ product.name }}</h3>
         <p>{{ product.description }}</p>
         <p>{{ product.price }}</p>
+        <p>Category: {{ product.category.name }}</p>
         <a href="{{ path('back_end_product_edit', {'id': product.id}) }}">Edit</a> |
         <a href="{{ path('back_end_product_delete', {'id': product.id}) }}">Delete</a>
         <hr>
