Implement basic security

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,8 @@
                     <a href="{{ path('back_end_product_list') }}">Products</a> |
                     <a href="{{ path('back_end_product_new') }}">New Product</a> ||
                     <a href="{{ path('back_end_category_list') }}">Categories</a> |
-                    <a href="{{ path('back_end_category_new') }}">New Category</a>
+                    <a href="{{ path('back_end_category_new') }}">New Category</a> ||
+                    <a href="{{ path('back_end_user_list') }}">Users</a>
                 </div>
                 <hr>
             </div>
