--- a/src/BackEndBundle/Resources/views/product/list.html.twig
+++ b/src/BackEndBundle/Resources/views/product/list.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-
+    {% include 'BackEndBundle:partial:_header.html.twig' %}
     <h2>This is product list action</h2>
     {% for product in products %}
 
