--- a/src/BackEndBundle/Resources/views/product/new.html.twig
+++ b/src/BackEndBundle/Resources/views/product/new.html.twig
@@ -1,5 +1,6 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
+    {% include 'BackEndBundle:partial:_header.html.twig' %}
     {{ form(form) }}
 {% endblock %}
