--- a/src/BackEndBundle/Resources/views/user/list.html.twig
+++ b/src/BackEndBundle/Resources/views/user/list.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
-
 {% block body %}
+  {% include 'BackEndBundle:partial:_header.html.twig' %}
   {% for user in users %}
     <h3>{{ user.id }} {{ user.username }}</h3>
     <hr>
