Add bootstrap container

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">
     </head>
     <body>
-        <div id="wrap">
+        <div class="container">
             {% block body %}{% endblock %}
             {% block javascripts %}
                 <script href="{{ asset('js/jquery-2.2.0.js') }}"></script>
