--- a/src/BackEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/BackEndBundle/Resources/views/partial/_header.html.twig
@@ -1,23 +1,29 @@
-<div id="header">
+<header>
   <h1>This is Shop BackEnd</h1>
   <hr>
-  <div id="nav">
-    <a href="{{ path('back_end_product_list') }}">Products</a> |
-    <a href="{{ path('back_end_product_new') }}">New Product</a> ||
-    <a href="{{ path('back_end_category_list') }}">Categories</a> |
-    <a href="{{ path('back_end_category_new') }}">New Category</a> ||
-    {% if is_granted('ROLE_ADMIN') %}
-      <a href="{{ path('back_end_user_list') }}">Users</a> |
-      <a href="{{ path('back_end_user_new') }}">New User</a>
-    {% endif %}
-  </div>
-  {% if app.user %}
-    <p>
-      Logged in as <b>{{ app.user.username }}</b>
-      <a href="{{ path('logout') }}">Logout</a>
-    </p>
-  {% else %}
-    <a href="{{ path('login_route') }}">Login</a>
-  {% endif %}
+  <nav>
+    <div class="row">
+      <div class="col-md-6">
+        <a href="{{ path('back_end_product_list') }}">Products</a>
+        <a href="{{ path('back_end_product_new') }}">New Product</a>
+        <a href="{{ path('back_end_category_list') }}">Categories</a>
+        <a href="{{ path('back_end_category_new') }}">New Category</a>
+        {% if is_granted('ROLE_ADMIN') %}
+          <a href="{{ path('back_end_user_list') }}">Users</a>
+          <a href="{{ path('back_end_user_new') }}">New User</a>
+        {% endif %}
+      </div>
+      <div class="col-md-6">
+        {% if app.user %}
+          <p>
+            Logged in as <b>{{ app.user.username }}</b>
+            <a href="{{ path('logout') }}">Logout</a>
+          </p>
+        {% else %}
+          <a href="{{ path('login_route') }}">Login</a>
+        {% endif %}
+      </div>
+    </div>
+  </nav>
   <hr>
-</div>
+</header>
