--- a/src/BackEndBundle/Resources/views/user/list.html.twig
+++ b/src/BackEndBundle/Resources/views/user/list.html.twig
@@ -3,6 +3,11 @@
   {% include 'BackEndBundle:partial:_header.html.twig' %}
   {% for user in users %}
     <h3>{{ user.id }} {{ user.username }}</h3>
+    <a href="{{ path('back_end_user_edit', {'id': user.id}) }}">Edit</a>
+    <form action="{{ path('back_end_user_delete') }}" method="POST">
+      <input type="hidden" name="user_id" value="{{ user.id }}">
+      <input type="submit" value="Delete">
+    </form>
     <hr>
   {% endfor %}
 {% endblock %}
