--- a/src/BackEndBundle/Resources/views/category/list.html.twig
+++ b/src/BackEndBundle/Resources/views/category/list.html.twig
@@ -5,7 +5,10 @@
     {% for category in categories %}
         <h3>{{ category.id }} {{ category.name }}</h3>
         <a href="{{ path('back_end_category_edit', {'id': category.id}) }}">Edit</a>
-        <a href="{{ path('back_end_category_delete', {'id': category.id}) }}">Delete</a>
+        <form action="{{ path('back_end_category_delete') }}" method="POST">
+            <input type="hidden" name="category_id" value="{{ category.id }}">
+            <input type="submit" value="Delete">
+        </form>
         <hr>
     {% endfor %}
 {% endblock %}
