--- a/src/BackEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/BackEndBundle/Resources/views/partial/_header.html.twig
@@ -1,29 +1,42 @@
 <header>
-  <h1>This is Shop BackEnd</h1>
-  <hr>
-  <nav>
-    <div class="row">
-      <div class="col-md-6">
-        <a href="{{ path('back_end_product_list') }}">Products</a>
-        <a href="{{ path('back_end_product_new') }}">New Product</a>
-        <a href="{{ path('back_end_category_list') }}">Categories</a>
-        <a href="{{ path('back_end_category_new') }}">New Category</a>
-        {% if is_granted('ROLE_ADMIN') %}
-          <a href="{{ path('back_end_user_list') }}">Users</a>
-          <a href="{{ path('back_end_user_new') }}">New User</a>
-        {% endif %}
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Shop</a>
       </div>
-      <div class="col-md-6">
-        {% if app.user %}
-          <p>
-            Logged in as <b>{{ app.user.username }}</b>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="{% if 'back_end_product_list'|active %}active{% endif %}">
+            <a href="{{ path('back_end_product_list') }}">Products</a>
+          </li>
+          <li class="{% if 'back_end_category_list'|active %}active{% endif %}">
+            <a href="{{ path('back_end_category_list') }}">Categories</a>
+          </li>
+          {% if is_granted('ROLE_ADMIN') %}
+            <li class="{% if 'back_end_user_list'|active %}active{% endif %}">
+              <a href="{{ path('back_end_user_list') }}">Users</a>
+            </li>
+          {% endif %}
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+          {% if app.user %}
+
             <a href="{{ path('logout') }}">Logout</a>
-          </p>
-        {% else %}
-          <a href="{{ path('login_route') }}">Login</a>
-        {% endif %}
-      </div>
-    </div>
+          {% endif %}
+          </li>
+
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
   </nav>
-  <hr>
 </header>
