--- a/src/BackEndBundle/Resources/views/user/list.html.twig
+++ b/src/BackEndBundle/Resources/views/user/list.html.twig
@@ -1,13 +1,35 @@
 {% extends '::base.html.twig' %}
 {% block body %}
   {% include 'BackEndBundle:partial:_header.html.twig' %}
-  {% for user in users %}
-    <h3>{{ user.id }} {{ user.username }}</h3>
-    <a href="{{ path('back_end_user_edit', {'id': user.id}) }}">Edit</a>
-    <form action="{{ path('back_end_user_delete') }}" method="POST">
-      <input type="hidden" name="user_id" value="{{ user.id }}">
-      <input type="submit" value="Delete">
-    </form>
-    <hr>
-  {% endfor %}
+  <a class="btn btn-primary" href="{{ path('back_end_category_new') }}">
+    New User
+  </a>
+  <table class="table">
+    <thead>
+    <th>Id</th>
+    <th>Name</th>
+    <th>Actions</th>
+    </thead>
+    <tbody>
+    {% for user in users %}
+      <tr>
+        <td>{{ user.id }}</td>
+        <td>{{ user.username }}</td>
+        <td>
+          <a class="btn btn-default pull-left" href="{{ path('back_end_user_edit', {'id': user.id}) }}">
+            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+          </a>
+          <div class="pull-left">
+            <form action="{{ path('back_end_user_delete') }}" method="POST">
+              <input type="hidden" name="product_id" value="{{ user.id }}">
+              <button class="btn btn-danger" type="submit">
+                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+              </button>
+            </form>
+          </div>
+        </td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
