--- a/src/BackEndBundle/Resources/views/security/login.html.twig
+++ b/src/BackEndBundle/Resources/views/security/login.html.twig
@@ -5,19 +5,26 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path('login_check') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <div class="row backend-login-form">
+        <div class="col-md-4 col-md-offset-4">
+            <form action="{{ path('login_check') }}" method="post">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" />
+                </div>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input class="form-control" type="password" id="password" name="_password" />
+                </div>
+                {#
+                    If you want to control the URL the user
+                    is redirected to on success (more details below)
+                    <input type="hidden" name="_target_path" value="/account" />
+                #}
 
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
-
-        <button type="submit">login</button>
-    </form>
+                <button class="btn btn-default center-block" type="submit">Login</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
