--- a/src/BackEndBundle/Resources/views/security/login.html.twig
+++ b/src/BackEndBundle/Resources/views/security/login.html.twig
@@ -1,9 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+
 
     <div class="row backend-login-form">
         <div class="col-md-4 col-md-offset-4">
@@ -22,8 +20,10 @@
                     is redirected to on success (more details below)
                     <input type="hidden" name="_target_path" value="/account" />
                 #}
-
                 <button class="btn btn-default center-block" type="submit">Login</button>
+                {% if error %}
+                    <p class="bg-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</p>
+                {% endif %}
             </form>
         </div>
     </div>
