--- a/src/BackEndBundle/Resources/views/user/list.html.twig
+++ b/src/BackEndBundle/Resources/views/user/list.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 {% block body %}
   {% include 'BackEndBundle:partial:_header.html.twig' %}
-  <a class="btn btn-primary" href="{{ path('back_end_category_new') }}">
+  <a class="btn btn-primary" href="{{ path('back_end_user_new') }}">
     New User
   </a>
   <table class="table">
