--- a/src/BackEndBundle/Resources/views/product/new.html.twig
+++ b/src/BackEndBundle/Resources/views/product/new.html.twig
@@ -1,6 +1,28 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    {% include 'BackEndBundle:partial:_header.html.twig' %}
-    {{ form(form) }}
+  {% include 'BackEndBundle:partial:_header.html.twig' %}
+  {{ form_start(form) }}
+  <div class="form-group {{ form_errors(form.name) ? 'has-error' : '' }}">
+    {{ form_label(form.name) }}
+    {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+    <span class="help-block">{{ form_errors(form.name) }}</span>
+  </div>
+  <div class="form-group {{ form_errors(form.description) ? 'has-error' : '' }}">
+    {{ form_label(form.description) }}
+    {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+    <span class="help-block">{{ form_errors(form.description) }}</span>
+  </div>
+  <div class="form-group {{ form_errors(form.price) ? 'has-error' : '' }}">
+    {{ form_label(form.price) }}
+    {{ form_widget(form.price, {'attr': {'class': 'form-control'}}) }}
+    <span class="help-block">{{ form_errors(form.price) }}</span>
+  </div>
+  <div class="form-group {{ form_errors(form.category) ? 'has-error' : '' }}">
+    {{ form_label(form.category) }}
+    {{ form_widget(form.category, {'attr': {'class': 'form-control'}}) }}
+    <span class="help-block">{{ form_errors(form.category) }}</span>
+  </div>
+  <button type="submit" class="btn btn-default">Save</button>
+  {{ form_end(form) }}
 {% endblock %}
