--- a/src/BackEndBundle/Resources/views/product/list.html.twig
+++ b/src/BackEndBundle/Resources/views/product/list.html.twig
@@ -8,6 +8,7 @@
     <table class="table">
         <thead>
             <th>Id</th>
+            <th>Image</th>
             <th>Name</th>
             <th>Category</th>
             <th>Price</th>
@@ -17,6 +18,7 @@
             {% for product in products %}
                 <tr>
                     <td>{{ product.id }}</td>
+                    <td><img class="product-thumbnail" src="{{ product.imageUrl }}" alt="product image"></td>
                     <td>{{ product.name }}</td>
                     <td>{{ product.category.name }}</td>
                     <td>{{ product.price }}</td>
