--- a/src/BackEndBundle/Resources/views/product/list.html.twig
+++ b/src/BackEndBundle/Resources/views/product/list.html.twig
@@ -1,42 +1,42 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    {% include 'BackEndBundle:partial:_header.html.twig' %}
-    <a class="btn btn-primary" href="{{ path('back_end_product_new') }}">
-        New Product
-    </a>
-    <table class="table">
-        <thead>
-            <th>Id</th>
-            <th>Image</th>
-            <th>Name</th>
-            <th>Category</th>
-            <th>Price</th>
-            <th>Actions</th>
-        </thead>
-        <tbody>
-            {% for product in products %}
-                <tr>
-                    <td>{{ product.id }}</td>
-                    <td><img class="product-thumbnail" src="{{ product.imageUrl }}" alt="product image"></td>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.category.name }}</td>
-                    <td>{{ product.price }}</td>
-                    <td>
-                        <a class="btn btn-default pull-left" href="{{ path('back_end_product_edit', {'id': product.id}) }}">
-                            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                        </a>
-                        <div class="pull-left">
-                        <form action="{{ path('back_end_product_delete') }}" method="POST">
-                                <input type="hidden" name="product_id" value="{{ product.id }}">
-                                <button class="btn btn-danger" type="submit">
-                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                </button>
-                        </form>
-                        </div>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+  {% include 'BackEndBundle:partial:_header.html.twig' %}
+  <a class="btn btn-primary" href="{{ path('back_end_product_new') }}">
+    New Product
+  </a>
+  <table class="table">
+    <thead>
+    <th>Id</th>
+    <th>Image</th>
+    <th>Name</th>
+    <th>Category</th>
+    <th>Price</th>
+    <th>Actions</th>
+    </thead>
+    <tbody>
+    {% for product in products %}
+      <tr>
+        <td>{{ product.id }}</td>
+        <td><img class="product-thumbnail" src="{{ product.imageUrl }}" alt="product image"></td>
+        <td>{{ product.name }}</td>
+        <td>{{ product.category.name }}</td>
+        <td>{{ product.price }}</td>
+        <td>
+          <form action="{{ path('back_end_product_delete') }}" method="POST">
+            <input type="hidden" name="product_id" value="{{ product.id }}">
+            <div class="btn-group">
+              <a class="btn btn-default" href="{{ path('back_end_product_edit', {'id': product.id}) }}">
+                <span class="glyphicon glyphicon-edit" aria-hidden="true"> Edit</span>
+              </a>
+              <button class="btn btn-danger" type="submit">
+                <span class="glyphicon glyphicon-remove" aria-hidden="true"> Delete</span>
+              </button>
+            </div>
+          </form>
+        </td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
