--- a/src/BackEndBundle/Resources/views/category/list.html.twig
+++ b/src/BackEndBundle/Resources/views/category/list.html.twig
@@ -14,9 +14,9 @@
     <tbody>
     {% for category in categories %}
       <tr>
-        <td>{{ category.id }}</td>
-        <td>{{ category.name }}</td>
-        <td>
+        <td class="col-md-1">{{ category.id }}</td>
+        <td class="col-md-8">{{ category.name }}</td>
+        <td class="col-md-3">
           <form action="{{ path('back_end_category_delete') }}" method="POST">
             <input type="hidden" name="product_id" value="{{ category.id }}">
             <div class="btn-group">
