--- a/src/FrontEndBundle/Resources/views/index.html.twig
+++ b/src/FrontEndBundle/Resources/views/index.html.twig
@@ -13,7 +13,10 @@
       <div class="row">
     {% endif %}
       <div class="col-md-{{ (max_columns / products_in_row) | round }}">
-        {{ product.name }}
+        <div class="product-tile">
+          <img src="{{ product.imageUrl }}" alt="{{ product.name }}">
+          {{ product.name }}
+        </div>
       </div>
     {% if i % products_in_row == products_in_row - 1 %}
       </div>
