--- a/src/FrontEndBundle/Resources/views/index.html.twig
+++ b/src/FrontEndBundle/Resources/views/index.html.twig
@@ -15,7 +15,7 @@
       <div class="col-md-{{ (max_columns / products_in_row) | round }}">
         <div class="product-tile">
           <img src="{{ product.imageUrl }}" alt="{{ product.name }}">
-          {{ product.name }}
+          <a href="{{ path('front_end_product_page', {'id': product.id}) }}">{{ product.name }}</a>
           <div class="rating-stars">{{ product.rating|rating|raw }}</div>
           <span class="price">{{ product.price|price|raw }}</span>
         </div>
