some more of product page

--- a/src/FrontEndBundle/Resources/views/index.html.twig
+++ b/src/FrontEndBundle/Resources/views/index.html.twig
@@ -1,11 +1,7 @@
 {% extends '::frontend_base.html.twig' %}
 
 {% block body %}
-
-  <div class="jumbotron">
-    <h1>This is shop!</h1>
-  </div>
-
+  {% include 'FrontEndBundle:partial:_header.html.twig' %}
   {% set products_in_row = 4 %}
   {% set max_columns = 12 %}
   {% for i, product in products %}
