--- a/src/FrontEndBundle/Resources/views/product.html.twig
+++ b/src/FrontEndBundle/Resources/views/product.html.twig
@@ -1,5 +1,18 @@
 {% extends '::frontend_base.html.twig' %}
 
 {% block body %}
-    {{ product.name }}
+    {% include 'FrontEndBundle:partial:_header.html.twig' %}
+    <div class="row">
+        <div class="col-md-8">
+            <img src="{{ product.imageUrl }}" alt="{{ product.name }}">
+        </div>
+        <div class="col-md-4">
+            <h3>{{ product.name }}</h3>
+            <div class="rating-stars">{{ product.rating|rating|raw }}</div>
+            <span class="price">{{ product.price|price|raw }}</span>
+            <div>
+                <button class="btn btn-success">Add to cart</button>
+            </div>
+        </div>
+    </div>
 {% endblock %}
