--- a/src/FrontEndBundle/Resources/views/product.html.twig
+++ b/src/FrontEndBundle/Resources/views/product.html.twig
@@ -11,7 +11,8 @@
             <div class="rating-stars">{{ product.rating|rating|raw }}</div>
             <span class="price">{{ product.price|price|raw }}</span>
             <div>
-                <button class="btn btn-success">Add to cart</button>
+                <button id="add-to-cart-button" class="btn btn-success">Add to cart</button>
+                <button id="get-cart-button" class="btn btn-warning">GET CART</button>
             </div>
         </div>
     </div>
