Some styling for frontend

--- a/app/Resources/views/frontend_base.html.twig
+++ b/app/Resources/views/frontend_base.html.twig
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
   <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}">
   <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+  <link rel="stylesheet" href="{{ asset('css/frontend.css') }}">
 </head>
 <body>
 <div class="container">
