--- a/src/FrontEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/FrontEndBundle/Resources/views/partial/_header.html.twig
@@ -1,3 +1,3 @@
-<div class="jumbotron">
-    <h1>This is shop!</h1>
-</div>
+<nav class="navbar navbar-inverse">
+  <a href="{{ path('front_end_homepage') }}" class="navbar-brand">The Shop</a>
+</nav>
