--- a/src/FrontEndBundle/Resources/views/category.html.twig
+++ b/src/FrontEndBundle/Resources/views/category.html.twig
@@ -9,20 +9,24 @@
     {% endfor %}
   </div>
 
+  <div class="alert alert-success">
+    {{ category.name }}
+  </div>
+
   {% set products_in_row = 4 %}
   {% set max_columns = 12 %}
   {% for i, product in products %}
     {% if i % products_in_row == 0 %}
       <div class="row">
     {% endif %}
-      <div class="col-md-{{ (max_columns / products_in_row) | round }}">
-        <div class="product-tile">
-          <img src="{{ product.imageUrl }}" alt="{{ product.name }}">
-          <a href="{{ path('front_end_product_page', {'id': product.id}) }}">{{ product.name }}</a>
-          <div class="rating-stars">{{ product.rating|rating|raw }}</div>
-          <span class="price">{{ product.price|price|raw }}</span>
-        </div>
+    <div class="col-md-{{ (max_columns / products_in_row) | round }}">
+      <div class="product-tile">
+        <img src="{{ product.imageUrl }}" alt="{{ product.name }}">
+        <a href="{{ path('front_end_product_page', {'id': product.id}) }}">{{ product.name }}</a>
+        <div class="rating-stars">{{ product.rating|rating|raw }}</div>
+        <span class="price">{{ product.price|price|raw }}</span>
       </div>
+    </div>
     {% if i % products_in_row == products_in_row - 1 %}
       </div>
     {% endif %}
