Some html for description and reviews

--- a/src/FrontEndBundle/Resources/views/product.html.twig
+++ b/src/FrontEndBundle/Resources/views/product.html.twig
@@ -23,4 +23,18 @@
             </div>
         </div>
     </div>
+    <div class="panel panel-info product-description">
+        <h2 class="panel-heading">
+            Description
+        </h2>
+        <p>{{ product.description }}</p>
+    </div>
+    <div class="panel panel-info product-reviews">
+        <h2 class="panel-heading">
+            Reviews
+        </h2>
+        <p>
+            TODO: Here be reviews
+        </p>
+    </div>
 {% endblock %}
