--- a/src/FrontEndBundle/Resources/views/category.html.twig
+++ b/src/FrontEndBundle/Resources/views/category.html.twig
@@ -21,7 +21,8 @@
     {% endif %}
     <div class="col-md-{{ (max_columns / products_in_row) | round }}">
       <div class="product-tile">
-        <img src="{{ product.imageUrl }}" alt="{{ product.name }}">
+        {% set productImage = product.imageUrl ?: asset('img/no_image.jpg') %}
+        <img class="product-category-image"  src="{{ productImage }}" alt="{{ product.name }}">
         <a href="{{ path('front_end_product_page', {'id': product.id}) }}">{{ product.name }}</a>
         <div class="rating-stars">{{ product.rating|rating|raw }}</div>
         <span class="price">{{ product.price|price|raw }}</span>
