Cart modal basic implementation

--- a/app/Resources/views/frontend_base.html.twig
+++ b/app/Resources/views/frontend_base.html.twig
@@ -21,6 +21,7 @@
     <script src="{{ asset('js/jquery-2.2.0.js') }}"></script>
     <script src="{{ asset('js/bootstrap.js') }}"></script>
     <script src="{{ asset('js/scripts.js') }}"></script>
+    <script src="{{ asset('js/cart.js') }}"></script>
   {% endblock %}
 </div>
 </body>
