--- a/src/FrontEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/FrontEndBundle/Resources/views/partial/_header.html.twig
@@ -1,3 +1,26 @@
 <nav class="navbar navbar-inverse">
   <a href="{{ path('front_end_homepage') }}" class="navbar-brand">The Shop</a>
+  <!-- Button trigger cart modal -->
+  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+    Show cart
+  </button>
 </nav>
+
+<!-- Cart modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body" id="cart-table">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
