--- a/src/FrontEndBundle/Resources/views/product.html.twig
+++ b/src/FrontEndBundle/Resources/views/product.html.twig
@@ -16,7 +16,8 @@
                 <div class="rating-stars">{{ product.rating|rating|raw }}</div>
                 <span class="price">{{ product.price|price|raw }}</span>
                 <div>
-                    <input type="hidden" name="selected-product" value="{{ product.id }}">
+                    <input type="hidden" name="selected-product-id" value="{{ product.id }}">
+                    <input type="hidden" name="selected-product-name" value="{{ product.name }}">
                     <button id="add-to-cart-button" class="btn btn-success">Add to cart</button>
                     <button id="get-cart-button" class="btn btn-warning">GET CART</button>
                 </div>
