Continue implementing shopping cart

--- a/app/Resources/views/frontend_base.html.twig
+++ b/app/Resources/views/frontend_base.html.twig
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="{{ asset('css/main.css') }}">
   {% endblock %}
   <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-  <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
-  <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}">
+  <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.css') }}">
+  <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap-theme.css') }}">
   <link rel="stylesheet" href="{{ asset('css/main.css') }}">
   <link rel="stylesheet" href="{{ asset('css/frontend.css') }}">
 </head>
@@ -18,8 +18,9 @@
 <div class="container">
   {% block body %}{% endblock %}
   {% block javascripts %}
-    <script src="{{ asset('js/jquery-2.2.0.js') }}"></script>
-    <script src="{{ asset('js/bootstrap.js') }}"></script>
+    <script src="{{ asset('assets/vendor/jquery/dist/jquery.js') }}"></script>
+    <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
+    <script src="{{ asset('assets/vendor/mustache.js/mustache.js') }}"></script>
     <script src="{{ asset('js/scripts.js') }}"></script>
     <script src="{{ asset('js/cart.js') }}"></script>
   {% endblock %}
