--- a/src/FrontEndBundle/Resources/views/product.html.twig
+++ b/src/FrontEndBundle/Resources/views/product.html.twig
@@ -18,8 +18,8 @@
                 <div>
                     <input type="hidden" name="selected-product-id" value="{{ product.id }}">
                     <input type="hidden" name="selected-product-name" value="{{ product.name }}">
+                    <input type="hidden" name="selected-product-price" value="{{ product.price }}">
                     <button id="add-to-cart-button" class="btn btn-success">Add to cart</button>
-                    <button id="get-cart-button" class="btn btn-warning">GET CART</button>
                 </div>
             </div>
         </div>
