Move base templates into their bundles

--- a/src/BackEndBundle/Resources/views/user/list.html.twig
+++ b/src/BackEndBundle/Resources/views/user/list.html.twig
@@ -1,4 +1,4 @@
-{% extends '::backend_base.html.twig' %}
+{% extends '@BackEnd/backend_base.html.twig' %}
 {% block body %}
   {% include 'BackEndBundle:partial:_header.html.twig' %}
   <a class="btn btn-primary" href="{{ path('back_end_user_new') }}">
