--- a/src/BackEndBundle/Resources/views/user/new.html.twig
+++ b/src/BackEndBundle/Resources/views/user/new.html.twig
@@ -1,4 +1,4 @@
-{% extends '::backend_base.html.twig' %}
+{% extends '@BackEnd/backend_base.html.twig' %}
 
 {% block body %}
   {% include 'BackEndBundle:partial:_header.html.twig' %}
