--- a/src/FrontEndBundle/Resources/views/product.html.twig
+++ b/src/FrontEndBundle/Resources/views/product.html.twig
@@ -1,4 +1,4 @@
-{% extends '::frontend_base.html.twig' %}
+{% extends '@FrontEnd/frontend_base.html.twig' %}
 
 {% block body %}
     {% include 'FrontEndBundle:partial:_header.html.twig' %}
