--- a/src/BackEndBundle/Resources/views/backend_base.html.twig
+++ b/src/BackEndBundle/Resources/views/backend_base.html.twig
@@ -19,6 +19,7 @@
             {% block javascripts %}
                 <script src="{{ asset('assets/vendor/jquery/dist/jquery.js') }}"></script>
                 <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
+                <script src="{{ asset('assets/vendor/jquery-query-object/jquery.query-object.js') }}"></script>
                 <script src="{{ asset('js/scripts.js') }}"></script>
             {% endblock %}
         </div>
