Make backoffice home page show product list

--- a/src/BackEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/BackEndBundle/Resources/views/partial/_header.html.twig
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Shop</a>
+        <a class="navbar-brand" href="{{ path('back_end_home') }}">Shop</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
