Introduce material design

--- a/src/FrontEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/FrontEndBundle/Resources/views/partial/_header.html.twig
@@ -2,7 +2,7 @@
   <a href="{{ path('front_end_homepage') }}" class="navbar-brand">The Shop</a>
   <!-- Button trigger cart modal -->
   <ul class="navbar-right">
-    <button type="button" class="btn btn-default" id="show-cart-button" data-toggle="modal" data-target="#myModal">
+    <button type="button" class="btn btn-raised btn-default" id="show-cart-button" data-toggle="modal" data-target="#myModal">
       <span class="glyphicon glyphicon-shopping-cart"></span> Cart
     </button>
   </ul>
