--- a/src/FrontEndBundle/Resources/views/product.html.twig
+++ b/src/FrontEndBundle/Resources/views/product.html.twig
@@ -19,7 +19,7 @@
                     <input type="hidden" name="selected-product-id" value="{{ product.id }}">
                     <input type="hidden" name="selected-product-name" value="{{ product.name }}">
                     <input type="hidden" name="selected-product-price" value="{{ product.price }}">
-                    <button id="add-to-cart-button" class="btn btn-success">Add to cart</button>
+                    <button id="add-to-cart-button" class="btn btn-raised btn-success">Add to cart</button>
                 </div>
             </div>
         </div>
