Show cart modal on adding product to cart; show proper total price in modal

--- a/src/FrontEndBundle/Resources/views/partial/_cart_table.html.twig
+++ b/src/FrontEndBundle/Resources/views/partial/_cart_table.html.twig
@@ -11,7 +11,7 @@
         <tr>
           <td>{{ productName }}</td>
           <td>{{ quantity }}</td>
-          <td>{{ productPrice }}</td>
+          <td>{{ totalPrice }}</td>
         </tr>
       {{ /items }}
       {{ ^items }}
