--- a/src/FrontEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/FrontEndBundle/Resources/views/partial/_header.html.twig
@@ -11,17 +11,10 @@
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a href="#" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Categories
-            <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-
-            {% for category in categories %}
-              <li><a href="{{ path('front_end_category_page', {categoryName: category.name}) }}">
-                  {{ category.name }}
-                </a>
-              </li>
-            {% endfor %}
-          </ul>
+          <a href="#" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
+            Categories<b class="caret"></b>
+          </a>
+          {{ render(controller('FrontEndBundle:Category:categoriesDropdown')) }}
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
