--- a/src/FrontEndBundle/Resources/views/partial/_categories_dropdown.html.twig
+++ b/src/FrontEndBundle/Resources/views/partial/_categories_dropdown.html.twig
@@ -1,7 +1,7 @@
 <ul class="dropdown-menu">
     {% for category in categories %}
         <li><a href="{{ path('front_end_category_page', {categoryName: category.name}) }}">
-                {{ category.name }}
+                {{ category.name|capitalize }}
             </a>
         </li>
     {% endfor %}
