--- a/src/FrontEndBundle/Resources/views/partial/_header.html.twig
+++ b/src/FrontEndBundle/Resources/views/partial/_header.html.twig
@@ -35,7 +35,7 @@
             {% include '@FrontEnd/partial/_cart_table.html.twig' %}
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <a href="{{ path('front_end_checkout_cart_page') }}" type="button" class="btn btn-primary">Checkout</a>
             </div>
           </div>
         </div>
